<resources>
    <string name="app_name">Musify</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="email_hint">Email</string>
    <string name="email_placeholder">example@gmail.com</string>
    <string name="continue_">Continue</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or">or</string>
    <string name="google_logo">Google Logo</string>
    <string name="sign_up_to_start_listening">Sign up to start listening</string>
    <string name="welcome_back">Welcome back</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="create_a_password">Create a password</string>
    <string name="include_special_symbols">- include special symbols</string>
    <string name="include_numbers">- include numbers</string>
    <string name="include_uppercase_and_lowercase_letters">- include uppercase and lowercase letters</string>
    <string name="be_at_least_10_characters_long">- be at least 10 characters long</string>
    <string name="the_password_must">The password must:</string>
    <string name="how_should_we_call_you">How should we call you?</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="create_account">Create account</string>
    <string name="your_email">Your email</string>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="track_thumbnail">Track thumbnail</string>
    <string name="recent_searches">Recent searches</string>
    <string name="history_empty">History empty</string>
    <string name="history_icon">history icon</string>
    <string name="delete_icon">delete icon</string>
    <string name="search_songs_and_more">Search songs and more</string>
    <string name="album_thumbnail">album thumbnail</string>
    <string name="song">Song</string>
    <string name="center_dot">·</string>
    <string name="album">Album</string>
    <string name="artist_thumbnail">artist thumbnail</string>
    <string name="artist">Artist</string>
    <string name="trendin_up_icon">trendin up icon</string>
    <string name="trending_artists">Trending artists</string>
    <string name="browse">Browse</string>
    <string name="artist_pfp">artist pfp</string>
    <string name="genre_card_background">genre card background</string>
    <string name="menu_icon">menu icon</string>
    <string name="play_next_icon">play next icon</string>
    <string name="add_to_favourite_icon">add to favourite icon</string>
    <string name="share_icon">share icon</string>
    <string name="add_to_queue_icon">add to queue icon</string>
    <string name="album_icon">album icon</string>
    <string name="save_to_playlist">Save to playlist</string>
    <string name="go_to_album">Go to album</string>
    <string name="go_to_artist">Go to artist</string>
    <string name="artist_icon">artist icon</string>
    <string name="save_to_playlist_icon">save to playlist icon</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="play_next">Play next</string>
    <string name="save_to_liked">Save to liked</string>
    <string name="share">Share</string>
    <string name="play_pause_icon">play/pause icon</string>
    <string name="new_playlist">New playlist</string>
    <string name="create_new">Create new</string>
    <string name="create_icon">create icon</string>
    <string name="download_icon">download icon</string>
    <string name="download_offline_icon">download offline icon</string>
    <string name="import_from_spotify">Import from spotify</string>
    <string name="import_multiple_from_spotify">Import multiple from spotify</string>
    <string name="new_playlist_fab">new playlist FAB</string>
    <string name="your_library">Your Library</string>
    <string name="library_playlist_cover">library playlist cover</string>
    <string name="library_play_button">library play button</string>
    <string name="playlist_cover">playlist cover</string>
    <string name="track_count">%d tracks</string>
    <string name="track_hours">%d hr </string>
    <string name="track_mins">%d min</string>
    <string name="playlist_like_button">playlist like button</string>
    <string name="track_cover">track cover</string>
    <string name="add_to_library">Add To Library</string>
    <string name="player_top_menu">Player top menu</string>
    <string name="queue">Queue</string>
    <string name="playing_from">Playing from: </string>
    <string name="done">Done</string>
    <string name="add_1_song_to_playlist">Add 1 song to playlist</string>
    <string name="name_required">Name required</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="playlist_name">Playlist name</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="playlist_options_button">Playlist options button</string>
    <string name="play_playlist">Play playlist</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="delete_playlist_button">Delete playlist button</string>
    <string name="icon">Icon</string>
    <string name="liked_songs">Liked songs</string>
    <string name="_120_songs">120 songs</string>
    <string name="downloads">Downloads</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="_18_artists">18 artists</string>
    <string name="_25_albums">25 albums</string>
    <string name="playlists">Playlists</string>
    <string name="_59_playlists">59 playlists</string>
    <string name="liked_tracks">%d liked tracks</string>
    <string name="playlists_count">%d playlists</string>
</resources>