<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:orientation="vertical"
    android:gravity="center_vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.signup.SignupSplashFragment"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="30dp">

        <ImageView
            android:id="@+id/iv_google_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/musify_logo"
            android:contentDescription="@string/google_logo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_to_start_listening"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_email_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="15dp"
            android:text="@string/sign_up_with_email"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_marginBottom="15dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_google_btn"
            style="@style/Widget.Material3.Button.OutlinedButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/sign_up_with_google"
            android:textAllCaps="false"
            app:icon="@drawable/ic_google_icon_dark"
            app:iconSize="25dp"
            app:iconTint="@android:color/transparent"
            app:iconTintMode="add"
            app:strokeColor="@color/material_dynamic_neutral80"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/signup_btn_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/sign_in" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="60dp" />

</LinearLayout>