<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.signup.SignupEmailFragment"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/how_should_we_call_you" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:placeholderText="John Doe"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:maxLines="1"
            android:layout_marginBottom="20dp"
            app:endIconMode="none">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/signup_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/your_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:placeholderText="@string/email_placeholder"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:maxLines="1"
            android:layout_marginBottom="20dp"
            app:endIconMode="none">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/signup_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/create_a_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/the_password_must" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="25dp">

                <TextView
                    android:id="@+id/signup_check_10chr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/be_at_least_10_characters_long"
                    android:layout_margin="2dp"
                    android:textColor="@color/text_err_red"/>

                <TextView
                    android:id="@+id/signup_check_upperlower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/include_uppercase_and_lowercase_letters"
                    android:layout_margin="2dp"
                    android:textColor="@color/text_err_red"/>

                <TextView
                    android:id="@+id/signup_check_numbers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/include_numbers"
                    android:layout_margin="2dp"
                    android:textColor="@color/text_err_red"/>

                <TextView
                    android:id="@+id/signup_check_symbols"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/include_special_symbols"
                    android:layout_margin="2dp"
                    android:textColor="@color/text_err_red"/>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup_create_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/create_account"
                app:cornerRadius="15dp"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/signup_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            app:indicatorSize="64dp"
            app:trackThickness="6dp" />
    </FrameLayout>

</FrameLayout>